# python-hearthstone-data

./: README.md  bootstrap.sh  format.py  setup.cfg  setup.py
.github/workflows/: release.yml
hearthstone_data/: __init__.py
