[metadata]
name = hearthstone_data
description = CardDefs.xml and Strings for Hearthstone
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/python-hearthstone-data/
download_url = https://github.com/HearthSim/python-hearthstone-data/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = hearthstone_data
include_package_data = True
zip_safe = True

[bdist_wheel]
universal = 1
